--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./Open_Sans/font-awesome-4.6.3/css/font-awesome.min.css" />
         <link rel="canonical" href="http://trtmn.com/" />
         <!--FavIcon Info Starts-->
-        <link rel="apple-touch-icon-precomposed" sizes="500x500" href="gravatar.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="500x500" href="./gravatar.png" />
         <!--<link rel="apple-touch-icon-precomposed" sizes="180x180" href="./favicon/apple-touch-icon.png">-->
         <link rel="icon" type="image/png" href="./favicon/favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="./favicon/favicon-16x16.png" sizes="16x16">
@@ -17,25 +17,25 @@
         <meta name="theme-color" content="#ffffff">
         <!--FavIcon Info Ends-->
 
-        <title>Matt Troutman • Quality Assurance Engineer</title>
+        <title>Sarah Troutman</title>
         <!--OG Info-->
-        <meta property="og:title" content="Matt Troutman • Quality Assurance Engineer" />
+        <meta property="og:title" content="Sarah Troutman" />
         <meta property="og:site_name" content="TRTMN" />
         <meta property="og:url" content="http://trtmn.com"/>
-        <meta property="og:description" content="Matt Troutman is a Dad, Husband, and a technophile. In the tech industry for over 10 years, Matt is passionate about introducing new technologies to people." />
-        <meta property="og:image" content="http://trtmn.com/twitter.png" />
+        <meta property="og:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
+        <meta property="og:image" content="./twitter.png" />
         <!--Standard Metadata-->
-        <meta name="keywords" content="Quality Assurance, quality, SurveyMonkey, technophile, musician, Matt Troutman, trtmn, Truett Troutman, Mid-America Nazarene Univerity, Sarah Troutman, Music, Django, GeniusLounge, Apple, Genius, GeniusBar, Genius Bar, Webmaster, San Jose, California, San Francisco, Marin, Palo Alto, San Mateo, Mateo, Matias, Kirksville MO, Ethel MO, Fishy, Topeka KS, Olathe, Gardner KS, Gardner, technology" />
-        <meta name="author" content="Matt Troutman" />
-        <meta name="description" content="Matt Troutman is a Dad, Husband, and a technophile. In the tech industry for over 10 years, Matt is passionate about introducing new technologies to people." />
+        <meta name="keywords" content="" />
+        <meta name="author" content="Sarah Troutman" />
+        <meta name="description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--Twitter Card Info-->
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@trtmn" />
-        <meta name="twitter:creator" content="@trtmn" />
-        <meta name="twitter:title" content="Matt Troutman • Quality Assurance Engineer" />
-        <meta name="twitter:description" content="Matt Troutman is a Dad, Husband, and a technophile. In the tech industry for over 10 years, Matt is passionate about introducing new technologies to people." />
-        <meta name="twitter:image" content="http://trtmn.com/twitter.png" />
+        <meta name="twitter:site" content="@rahrahramblings" />
+        <meta name="twitter:creator" content="@rahrahramblings" />
+        <meta name="twitter:title" content="Sarah Troutman" />
+        <meta name="twitter:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
+        <meta name="twitter:image" content="./twitter.png" />
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -49,12 +49,12 @@
         {
         "@context": "http://schema.org",
         "@type": "Person",
-        "givenName": "Matt",
+        "givenName": "Sarah",
         "familyName": "Troutman",
-        "name": "Matt Troutman",
-        "image": "http://trtmn.com/gravatar.png",
-        "jobTitle": "Quality Assurance Engineer",
-        "url": "http://trtmn.com"
+        "name": "Sarah Troutman",
+        "image": "http://s.trtmn.com/gravatar.png",
+        "jobTitle": "Grahpic Designer",
+        "url": "http://s.trtmn.com"
         }
         </script>
     </head>
@@ -66,57 +66,43 @@
                         <img src="./gravatar.png">
                 </div>
                 <div class="hero">
-                    <h1>Matt Troutman</h1>
+                    <h1>Sarah Troutman</h1>
                     <!-- Tagline-->
-                    <h3>Quality Assurance Engineer</h3>
+                    <h3>Graphic Designer • Adpotion Advocate</h3>
                 </div>
                 <div class="creative-commons">
                     <!-- Twitter-->
-                    <a href="https://twitter.com/trtmn" target="_blank" title="Connect with Matt on Twitter">
+                    <a href="https://twitter.com/rahrahramblings" target="_blank" title="Connect with Sarah on Twitter">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle-thin fa-stack-2x"></i>
                             <i class="fa fa-twitter fa-stack-1x"></i>
                         </span>
                     </a>
                     <!-- Facebook-->
-                    <a href="https://facebook.com/m.trtmn" target="_blank" title="Connect with Matt on Facebook">
+                    <a href="https://www.facebook.com/SarahTroutman" target="_blank" title="Connect with Sarah on Facebook">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle-thin fa-stack-2x"></i>
                             <i class="fa fa-facebook fa-stack-1x"></i>
                         </span>
                     </a>
-                    <!-- LinkedIn-->
-                    <a href="https://www.linkedin.com/" target="_blank" title="Connect with Matt on LinkedIn">
-                        <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle-thin fa-stack-2x"></i>
-                            <i class="fa fa-linkedin fa-stack-1x"></i>
-                        </span>
-                    </a>
 
                     <br>
                     <!-- Snapchat-->
-                    <a href="https://www.snapchat.com/add/trtmn1" target="_blank" title="Send Matt a snap!">
+                    <a href="https://www.snapchat.com/add/rahrah619" target="_blank" title="Send Sarah a snap!">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle-thin fa-stack-2x"></i>
                             <i class="fa fa-snapchat-ghost fa-stack-1x"></i>
                         </span>
                     </a>
                     <!-- Instagram-->
-                    <a href="https://instagram.com/trtmn" target="_blank" title="Matt's Instagram photos">
+                    <a href="https://instagram.com/rahrahslens" target="_blank" title="Sarah's Instagram photos">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle-thin fa-stack-2x"></i>
                             <i class="fa fa-instagram fa-stack-1x"></i>
                         </span>
                     </a>
-                    <!-- WhatsApp-->
-                    <a href="https://chat.whatsapp.com/Egmx0S3FTVqIZpwWRNcL2F" target="_blank" title="Connect with Matt on WhatsApp">
-                        <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle-thin fa-stack-2x"></i>
-                            <i class="fa fa-whatsapp fa-stack-1x"></i>
-                        </span>
-                    </a>
                     <!--Messenger-->
-                    <a href="https://m.me/m.trtmn" target="_blank" title="Connect with Matt on Messenger"
+                    <a href="https://m.me/SarahTroutman" target="_blank" title="Connect with Sarah on Messenger"
                        <span class="fa-stack fa-2x">
                            <i class="fa fa-circle-thin fa-stack-2x"></i>
                            <i class="icon-fbm"></i>
