Updating OG URL

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--OG Info-->
         <meta property="og:title" content="Sarah Troutman" />
         <meta property="og:site_name" content="TRTMN" />
-        <meta property="og:url" content="http://trtmn.com"/>
+        <meta property="og:url" content="http://s.trtmn.com"/>
         <meta property="og:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
         <meta property="og:image" content="./twitter.png" />
         <!--Standard Metadata-->
