updated the canonical URL

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="main.css"" rel="stylesheet" />
         <link href="./Open_Sans/fontello-4d5fb862/css/fontello-embedded.css" rel="stylesheet"/>
         <link rel="stylesheet" href="./Open_Sans/font-awesome-4.6.3/css/font-awesome.min.css" />
-        <link rel="canonical" href="http://trtmn.com/" />
+        <link rel="canonical" href="http://s.trtmn.com/" />
         <!--FavIcon Info Starts-->
         <link rel="apple-touch-icon-precomposed" sizes="500x500" href="./gravatar.png" />
         <!--<link rel="apple-touch-icon-precomposed" sizes="180x180" href="./favicon/apple-touch-icon.png">-->
