--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta property="og:site_name" content="TRTMN" />
         <meta property="og:url" content="http://s.trtmn.com"/>
         <meta property="og:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
-        <meta property="og:image" content="./twitter.png" />
+        <meta property="og:image" content="http://s.trtmn.com/twitter.png" />
         <!--Standard Metadata-->
         <meta name="keywords" content="" />
         <meta name="author" content="Sarah Troutman" />
