update twitter image URL

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <meta name="twitter:creator" content="@rahrahramblings" />
         <meta name="twitter:title" content="Sarah Troutman" />
         <meta name="twitter:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
-        <meta name="twitter:image" content="./twitter.png" />
+        <meta name="twitter:image" content="http://s.trtmn.com/twitter.png" />
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
