Hi nice to meet you in place of title

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="hero">
                     <h1>Sarah Troutman</h1>
                     <!-- Tagline-->
-                    <h3>Graphic Designer • Adpotion Advocate</h3>
+                    <h3>Hi. Nice to meet you.</h3>
                 </div>
                 <div class="creative-commons">
                     <!-- Twitter-->
