--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <meta property="og:title" content="Sarah Troutman" />
         <meta property="og:site_name" content="TRTMN" />
         <meta property="og:url" content="http://s.trtmn.com"/>
-        <meta property="og:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
+        <meta property="og:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator, Graphic Designer, and an advocate for all things adoption." />
         <meta property="og:image" content="http://s.trtmn.com/twitter.png" />
         <!--Standard Metadata-->
         <meta name="keywords" content="" />
         <meta name="author" content="Sarah Troutman" />
-        <meta name="description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
+        <meta name="description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator, Graphic Designer, and an advocate for all things adoption." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--Twitter Card Info-->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@rahrahramblings" />
         <meta name="twitter:creator" content="@rahrahramblings" />
         <meta name="twitter:title" content="Sarah Troutman" />
-        <meta name="twitter:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator and Graphic Designer, and an advocate for all things adoption." />
+        <meta name="twitter:description" content="Sarah Troutman is a Mom & Wife. She is a Children's Ministry Coordinator, Graphic Designer, and an advocate for all things adoption." />
         <meta name="twitter:image" content="http://s.trtmn.com/twitter.png" />
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -68,7 +68,7 @@
                 <div class="hero">
                     <h1>Sarah Troutman</h1>
                     <!-- Tagline-->
-                    <h3>Hi. Nice to meet you.</h3>
+                    <h3></h3>
                 </div>
                 <div class="creative-commons">
                     <!-- Twitter-->
